--- a/04-Numpy_indexing.ipynb
+++ b/04-Numpy_indexing.ipynb
@@ -15,9 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "id": "ztwtLIbJDpYx"
+    "id": "ztwtLIbJDpYx",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -52,20 +53,19 @@
      "user_tz": -60
     },
     "id": "ZsaO3RdIDuMa",
-    "outputId": "37f2e2ee-0f98-49a3-d375-0e3fcda2ba12"
+    "outputId": "37f2e2ee-0f98-49a3-d375-0e3fcda2ba12",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.06018823,  0.7189234 ,  2.0343148 ,  0.46501692, -0.21967535,\n",
-       "       -1.18907502, -0.45971401,  0.17245139, -2.30601334, -0.79800272])"
+       "array([-0.56717818, -1.22468922,  1.22088759,  0.91442352,  0.45195361,\n",
+       "        0.58047433, -1.28138648, -0.64241218,  0.60848236, -0.05006814])"
       ]
      },
      "execution_count": 2,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -105,19 +105,18 @@
      "user_tz": -60
     },
     "id": "9uxQWL_jEAXH",
-    "outputId": "283660fd-9203-49c7-cb88-087d97faa7cd"
+    "outputId": "283660fd-9203-49c7-cb88-087d97faa7cd",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7189234047200016"
+       "-1.2246892151602833"
       ]
      },
      "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -155,19 +154,18 @@
      "user_tz": -60
     },
     "id": "4tCNuBLpELzd",
-    "outputId": "18026307-c269-49df-bdd2-f2791aa931d5"
+    "outputId": "18026307-c269-49df-bdd2-f2791aa931d5",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.7189234 , 2.0343148 , 0.46501692])"
+       "array([-1.22468922,  1.22088759,  0.91442352])"
       ]
      },
      "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -186,9 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "id": "R-cldFxDE-3o"
+    "id": "R-cldFxDE-3o",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -214,20 +213,19 @@
      "user_tz": -60
     },
     "id": "YzyfJV6wFFSa",
-    "outputId": "40d38da9-28e5-49a5-c8db-46d6a3c8c011"
+    "outputId": "40d38da9-28e5-49a5-c8db-46d6a3c8c011",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.06018823, 10.        , 10.        , 10.        , -0.21967535,\n",
-       "       -1.18907502, -0.45971401,  0.17245139, -2.30601334, -0.79800272])"
+       "array([-0.56717818, 10.        , 10.        , 10.        ,  0.45195361,\n",
+       "        0.58047433, -1.28138648, -0.64241218,  0.60848236, -0.05006814])"
       ]
      },
      "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -263,20 +261,19 @@
      "user_tz": -60
     },
     "id": "3Wh8TLBOdS1f",
-    "outputId": "f55ee4ca-52d2-4dfc-c6a0-a497cc7548fa"
+    "outputId": "f55ee4ca-52d2-4dfc-c6a0-a497cc7548fa",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.21967535, -1.18907502, -0.45971401,  0.17245139, -2.30601334,\n",
-       "       -0.79800272])"
+       "array([ 0.45195361,  0.58047433, -1.28138648, -0.64241218,  0.60848236,\n",
+       "       -0.05006814])"
       ]
      },
      "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -297,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -314,21 +311,20 @@
      "user_tz": -60
     },
     "id": "wnDoPx6KdnVr",
-    "outputId": "4a4e7e11-8d7b-41e1-eadf-92a509a26c35"
+    "outputId": "4a4e7e11-8d7b-41e1-eadf-92a509a26c35",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.46656473, -1.27434947,  1.81720115,  0.4786384 , -1.00751506],\n",
-       "       [ 0.97354425, -0.4645227 , -0.77656696, -0.72567148,  0.13718539],\n",
-       "       [-0.01898209, -0.0975492 , -0.14066817, -1.60877558, -0.74811911]])"
+       "array([[ 2.40100503,  0.13748981, -0.62384989, -1.16260668,  0.45016854],\n",
+       "       [ 0.85358083,  0.63036613,  1.22776553, -0.17238484, -1.15729928],\n",
+       "       [ 0.32684466,  0.24254852,  1.02185303, -0.11438528, -1.42805106]])"
       ]
      },
-     "execution_count": 9,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 8,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -348,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -365,20 +361,19 @@
      "user_tz": -60
     },
     "id": "PwEp-hwKeBXy",
-    "outputId": "b6b9af57-6869-48f9-be4c-6f987868f949"
+    "outputId": "b6b9af57-6869-48f9-be4c-6f987868f949",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.97354425, -0.4645227 ],\n",
-       "       [-0.01898209, -0.0975492 ]])"
+       "array([[0.85358083, 0.63036613],\n",
+       "       [0.32684466, 0.24254852]])"
       ]
      },
-     "execution_count": 11,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 9,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -397,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -414,20 +409,19 @@
      "user_tz": -60
     },
     "id": "2SnaezpQeTGq",
-    "outputId": "536fe59f-60fd-48da-d5c1-8ff3ad72e45b"
+    "outputId": "536fe59f-60fd-48da-d5c1-8ff3ad72e45b",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.97354425, -0.4645227 , -0.77656696, -0.72567148,  0.13718539],\n",
-       "       [-0.01898209, -0.0975492 , -0.14066817, -1.60877558, -0.74811911]])"
+       "array([[ 0.85358083,  0.63036613,  1.22776553, -0.17238484, -1.15729928],\n",
+       "       [ 0.32684466,  0.24254852,  1.02185303, -0.11438528, -1.42805106]])"
       ]
      },
-     "execution_count": 12,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -448,9 +442,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "id": "vtuQhL9EFt08"
+    "id": "vtuQhL9EFt08",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -459,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -476,20 +471,19 @@
      "user_tz": -60
     },
     "id": "Wa9qPa0nFzUW",
-    "outputId": "de16b253-7d42-4d24-f587-da4cd6a1172b"
+    "outputId": "de16b253-7d42-4d24-f587-da4cd6a1172b",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.06018823, 10.        , 10.        , 10.        , -0.21967535,\n",
-       "       -1.18907502, -0.45971401,  0.17245139, -2.30601334, -0.79800272])"
+       "array([-0.56717818, 10.        , 10.        , 10.        ,  0.45195361,\n",
+       "        0.58047433, -1.28138648, -0.64241218,  0.60848236, -0.05006814])"
       ]
      },
-     "execution_count": 14,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 12,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -499,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -516,19 +510,18 @@
      "user_tz": -60
     },
     "id": "vInkaepAF0zc",
-    "outputId": "b337c470-0e38-41d0-9ad6-36deb7e2e361"
+    "outputId": "b337c470-0e38-41d0-9ad6-36deb7e2e361",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.17245139, -2.30601334, -0.79800272])"
+       "array([-0.64241218,  0.60848236, -0.05006814])"
       ]
      },
-     "execution_count": 15,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 13,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -547,9 +540,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "id": "-cTrdqfMF_Em"
+    "id": "-cTrdqfMF_Em",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -567,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -584,19 +578,18 @@
      "user_tz": -60
     },
     "id": "lF7FFdYtGDKa",
-    "outputId": "fb68dab7-2ba8-423a-9eac-212b283a3b9c"
+    "outputId": "fb68dab7-2ba8-423a-9eac-212b283a3b9c",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([100.        ,  -2.30601334,  -0.79800272])"
+       "array([ 1.00000000e+02,  6.08482363e-01, -5.00681387e-02])"
       ]
      },
-     "execution_count": 17,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 15,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -615,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -632,21 +625,20 @@
      "user_tz": -60
     },
     "id": "ZYZMwqPAGN8q",
-    "outputId": "4a15a063-33b7-49ae-8b69-b400ad3d45de"
+    "outputId": "4a15a063-33b7-49ae-8b69-b400ad3d45de",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 6.01882309e-02,  1.00000000e+01,  1.00000000e+01,  1.00000000e+01,\n",
-       "       -2.19675349e-01, -1.18907502e+00, -4.59714011e-01,  1.00000000e+02,\n",
-       "       -2.30601334e+00, -7.98002718e-01])"
+       "array([-5.67178177e-01,  1.00000000e+01,  1.00000000e+01,  1.00000000e+01,\n",
+       "        4.51953606e-01,  5.80474333e-01, -1.28138648e+00,  1.00000000e+02,\n",
+       "        6.08482363e-01, -5.00681387e-02])"
       ]
      },
-     "execution_count": 18,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 16,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -665,9 +657,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "id": "6P_wV4hhHtnv"
+    "id": "6P_wV4hhHtnv",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -677,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -694,19 +687,18 @@
      "user_tz": -60
     },
     "id": "wG92XXlvHzFM",
-    "outputId": "810d38fb-7e0d-44f8-8ce9-2a0f18a15655"
+    "outputId": "810d38fb-7e0d-44f8-8ce9-2a0f18a15655",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([200.        ,  -2.30601334,  -0.79800272])"
+       "array([ 2.00000000e+02,  6.08482363e-01, -5.00681387e-02])"
       ]
      },
-     "execution_count": 20,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 18,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -716,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -733,21 +725,20 @@
      "user_tz": -60
     },
     "id": "Z5-I7hv-H1Ec",
-    "outputId": "cb95f944-6811-4383-e883-d056be3970eb"
+    "outputId": "cb95f944-6811-4383-e883-d056be3970eb",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 6.01882309e-02,  1.00000000e+01,  1.00000000e+01,  1.00000000e+01,\n",
-       "       -2.19675349e-01, -1.18907502e+00, -4.59714011e-01,  1.00000000e+02,\n",
-       "       -2.30601334e+00, -7.98002718e-01])"
+       "array([-5.67178177e-01,  1.00000000e+01,  1.00000000e+01,  1.00000000e+01,\n",
+       "        4.51953606e-01,  5.80474333e-01, -1.28138648e+00,  1.00000000e+02,\n",
+       "        6.08482363e-01, -5.00681387e-02])"
       ]
      },
-     "execution_count": 21,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 19,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -768,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -785,20 +776,19 @@
      "user_tz": -60
     },
     "id": "ctxI87WvI1Fo",
-    "outputId": "5a745ea8-6d29-4afe-b67f-36908225eb06"
+    "outputId": "5a745ea8-6d29-4afe-b67f-36908225eb06",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2.18942197,  0.66471153, -0.23176659, -1.87474695, -0.37153205,\n",
-       "        1.32312133, -0.87469178,  0.0229977 ,  0.18909458,  0.1033204 ])"
+       "array([ 1.70429449,  0.81439495,  1.1642333 ,  0.34425266,  0.21265945,\n",
+       "       -1.23879187, -0.80424111,  0.10781845, -0.74197375,  0.11844308])"
       ]
      },
-     "execution_count": 22,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 20,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -820,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -837,20 +827,19 @@
      "user_tz": -60
     },
     "id": "u6H3C4dYJC-L",
-    "outputId": "9885f7fe-9af3-45cd-bc1c-736f8a20e676"
+    "outputId": "9885f7fe-9af3-45cd-bc1c-736f8a20e676",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True, False, False, False,  True, False,  True,  True,\n",
+       "array([ True,  True,  True,  True,  True, False, False,  True, False,\n",
        "        True])"
       ]
      },
-     "execution_count": 23,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 21,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -869,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -886,7 +875,8 @@
      "user_tz": -60
     },
     "id": "QpUEST9aJSu_",
-    "outputId": "614204b3-f441-4b01-fff9-88bcdbac1e96"
+    "outputId": "614204b3-f441-4b01-fff9-88bcdbac1e96",
+    "tags": []
    },
    "outputs": [
     {
@@ -895,10 +885,8 @@
        "False"
       ]
      },
-     "execution_count": 24,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 22,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -918,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -935,20 +923,19 @@
      "user_tz": -60
     },
     "id": "YE__BOshn_7o",
-    "outputId": "7e0068c1-1c31-4d71-e11d-4e82c83d9ef2"
+    "outputId": "7e0068c1-1c31-4d71-e11d-4e82c83d9ef2",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True, False, False, False,  True, False,  True,  True,\n",
+       "array([ True,  True,  True,  True,  True, False, False,  True, False,\n",
        "        True])"
       ]
      },
-     "execution_count": 25,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 23,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -968,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -986,7 +973,8 @@
      "user_tz": -60
     },
     "id": "RmxTMOrXhFR4",
-    "outputId": "4fa1601c-36ad-4e70-d623-2ab85dfe2705"
+    "outputId": "4fa1601c-36ad-4e70-d623-2ab85dfe2705",
+    "tags": []
    },
    "outputs": [
     {
@@ -998,10 +986,8 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 24,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1012,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1029,20 +1015,19 @@
      "user_tz": -60
     },
     "id": "QWd_e2UgnjLK",
-    "outputId": "286cb666-49df-42e7-a1af-0a6ba6dcf677"
+    "outputId": "286cb666-49df-42e7-a1af-0a6ba6dcf677",
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.18942197, 0.66471153, 1.32312133, 0.0229977 , 0.18909458,\n",
-       "       0.1033204 ])"
+       "array([1.70429449, 0.81439495, 1.1642333 , 0.34425266, 0.21265945,\n",
+       "       0.10781845, 0.11844308])"
       ]
      },
-     "execution_count": 26,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 25,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1105,7 +1090,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
