--- a/14-Seaborn_concept.ipynb
+++ b/14-Seaborn_concept.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "lNQVFZdQZ8LR"
    },
    "source": [
-    "# 13. Seaborn introduction\n",
+    "# 14. Seaborn introduction\n",
     "\n",
     "We now switch to another plotting library particularly popular for statistics. It is built *on top of Matplotlib* so you will see that you can re-use a lot of what you have just learned. The creation of plots and the way to handle data input is however very different, with Matplotlib being very explicity (and lengthy) while Seaborn is implicit."
    ]
