--- a/16-Seaborn_regression.ipynb
+++ b/16-Seaborn_regression.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "HQHMfCs-ZVq8"
    },
    "source": [
-    "# 15. Regression\n",
+    "# 16. Regression\n",
     "\n",
     "Seaborn is a great tool if you want to quickly explore data and relations between variables. In addition to just plotting scatterplots you can also perform regression while plotting, a task for which seaborn uses the statsmodels package. **Note that you cannot extract fit values from the plots. The goal here is rather exploratory or to generate figures**. If you need the fit values you will need to use statsmodels directly."
    ]
