--- a/18-Matplotlib_annotations.ipynb
+++ b/18-Matplotlib_annotations.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "7nWTjZYpB57L"
    },
    "source": [
-    "# 17. Legends and Annotations\n",
+    "# 18. Legends and Annotations\n",
     "\n",
     "If you prepare figures for an article you often need to add some annotations to your figure, in particular legends but also specific text such as sub-figure labels. We show these advanced Matplotlib customization here."
    ]
