--- a/21-scikit-learn.ipynb
+++ b/21-scikit-learn.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ab3d042d-c41e-4311-8052-d7ef9c0c5b86",
    "metadata": {},
    "source": [
-    "# 20. scikit-learn\n",
+    "# 21. scikit-learn\n",
     "\n",
     "scikit-learn is the most popular Machine Learning package in Python. It implements many different types of models, regression, trees, clustering etc. as well as many useful tools for pre- and post-processing. Just like for scipy and statsmodels, we give here an extremely brief introduction to this library, rather to explain its general functioning than to present specific methods. Note that scikit-learn only offers \"classical\" methods and cannot be used e.g. for Deep Learning."
    ]
