--- a/_sources/07-Back_to_Pandas.ipynb
+++ b/_sources/07-Back_to_Pandas.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "vSh_WANmJ1m4"
    },
    "source": [
-    "# 6. Back to Pandas\n",
+    "# 7. Back to Pandas\n",
     "\n",
     "We have started this course by importing a DataFrame, briefly exploring it and discovering that Numpy was underlying these structures. Then we explored in more details those Numpy arrays. Now we come back to these DataFrames and will see that we can re-use many concepts from Numpy in Pandas."
    ]
