--- a/_sources/08-Operate_on_DataFrames.ipynb
+++ b/_sources/08-Operate_on_DataFrames.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "TD06UcxH2Aap"
    },
    "source": [
-    "# 7. Operating on DataFrames\n",
+    "# 8. Operating on DataFrames\n",
     "\n",
     "We have seen in the very first chapter that we could easily import CSV or Excel sheets as DataFrames in Python. We have also seen that those dataframes are essentially two-dimensional tables where each element can be located via an index and a column name. We have also seen that each column is in fact a Numpy array and have learned how to handle and process those arrays.\n",
     "\n",
