--- a/_sources/09-DataFrame_indexing.ipynb
+++ b/_sources/09-DataFrame_indexing.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "TsH_T3FL-Ms4"
    },
    "source": [
-    "# 8. DataFrame indexing\n",
+    "# 9. DataFrame indexing\n",
     "\n",
     "We have seen two ways of doing indexing in Numpy: with numerical indices and with boolean arrays. We will see that we can apply a very similar approach to DataFrame indexing. However we have one additional component that we didn't have before: while elements in a Numpy array can be purely located by their position (numerical indices), elements of a DataFrame can additionally be located thanks to their column name and index (not necessarily numerical).\n",
     "\n",
