--- a/_sources/13-Matplotlib_non_data_elements.ipynb
+++ b/_sources/13-Matplotlib_non_data_elements.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "K4L1Wbs5Mrfp"
    },
    "source": [
-    "# 12. Matplotlib: adjusting non-data elements\n",
+    "# 13. Matplotlib: adjusting non-data elements\n",
     "\n",
     "We will see later on other types of plots that we can generate, but before that, we want to explore how we can adjust the myriad of elements of a plot: titles, axis, ticks etc.\n"
    ]
