--- a/_sources/19-Alternatives.ipynb
+++ b/_sources/19-Alternatives.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "NcsXd_vDZ93X"
    },
    "source": [
-    "# 18. Other libraries\n",
+    "# 19. Other libraries\n",
     "\n",
     "There are many alternatives to the solutions shown during the course. Depending on your field and background you might want to search for another solution. Generally however libraries work mostly like seaborn i.e. you pass a data element to a plotting function and then specify which \"aspect\" of the data you want to plot and use for color, marker etc. aesthetics."
    ]
