--- a/_sources/22-Image_processing.ipynb
+++ b/_sources/22-Image_processing.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23e70597-4fbf-4dad-b3ed-f33af69fe363",
    "metadata": {},
    "source": [
-    "# 21. Image processing\n",
+    "# 22. Image processing\n",
     "\n",
     "We have seen in early chapters how Numpy allows us to handle arrays of any dimensions. Images are in fact just such arrays. A gray-scale image is for example just a 2D array of pixels, an RGB image (normal JPG image for example) is a 3D image with three channels, red, green and blue. Images can also occur in many other formats, especially in sciences. For example in microscopy images can be acquired over time, as a volume and in multiple channels, thus generating up to 5D images.\n",
     "\n",
