fix mean over non-numeric change

--- a/10-Pandas_combine.ipynb
+++ b/10-Pandas_combine.ipynb
@@ -1937,7 +1937,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x12f02b700>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x12f5bcd00>"
       ]
      },
      "execution_count": 24,
@@ -2185,7 +2185,7 @@
     "id": "Ao4wCb6eCJut"
    },
    "source": [
-    "However we wont go here through the details of the group data structure. What we can simply do is magically apply functions directly on the grouped object. For example to get the mean:"
+    "However we wont go here through the details of the group data structure. What we can simply do is magically apply functions directly on the grouped object. For example to get the mean we can use:"
    ]
   },
   {
@@ -2212,14 +2212,6 @@
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/mk/632_7fgs4v374qc935pvf9v00000gn/T/ipykernel_95390/491459327.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
-      "  grouped_penguins.mean()\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -2305,108 +2297,6 @@
     }
    ],
    "source": [
-    "grouped_penguins.mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is a good example of a warning for how we are supposed to use a function. Here the behavior is changing and the developers are warning us of a future change that might break our code. We can try to fix it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bill_length_mm</th>\n",
-       "      <th>bill_depth_mm</th>\n",
-       "      <th>flipper_length_mm</th>\n",
-       "      <th>body_mass_g</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>species</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Adelie</th>\n",
-       "      <td>38.791391</td>\n",
-       "      <td>18.346358</td>\n",
-       "      <td>189.953642</td>\n",
-       "      <td>3700.662252</td>\n",
-       "      <td>2008.013158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Chinstrap</th>\n",
-       "      <td>48.833824</td>\n",
-       "      <td>18.420588</td>\n",
-       "      <td>195.823529</td>\n",
-       "      <td>3733.088235</td>\n",
-       "      <td>2007.970588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Gentoo</th>\n",
-       "      <td>47.504878</td>\n",
-       "      <td>14.982114</td>\n",
-       "      <td>217.186992</td>\n",
-       "      <td>5076.016260</td>\n",
-       "      <td>2008.080645</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           bill_length_mm  bill_depth_mm  flipper_length_mm  body_mass_g  \\\n",
-       "species                                                                    \n",
-       "Adelie          38.791391      18.346358         189.953642  3700.662252   \n",
-       "Chinstrap       48.833824      18.420588         195.823529  3733.088235   \n",
-       "Gentoo          47.504878      14.982114         217.186992  5076.016260   \n",
-       "\n",
-       "                  year  \n",
-       "species                 \n",
-       "Adelie     2008.013158  \n",
-       "Chinstrap  2007.970588  \n",
-       "Gentoo     2008.080645  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "grouped_penguins.mean(numeric_only=True)"
    ]
   },
@@ -2416,7 +2306,7 @@
     "id": "QU-8oVg-CZpG"
    },
    "source": [
-    "As you can see Pandas automatically computes the mean for each category and each column. The output then is a DataFrame where each line corresponds to a given category. One can push this further by using e.g. multiple columns for grouping, but this goes beyond the present course."
+    "As you can see Pandas automatically computes the mean for each category and each column. The output then is a DataFrame where each line corresponds to a given category. Note that we had here to use the ```numeric_only``` option to tell Pandas to not attempt to take the mean over a string column (in older version of Pandas, \"bad\" columns would just be silently dropped, which can be dangerous).One can push this further by using e.g. multiple columns for grouping, but this goes beyond the present course."
    ]
   },
   {
@@ -2473,7 +2363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
