--- a/02-Numpy_arrays.ipynb
+++ b/02-Numpy_arrays.ipynb
@@ -1226,13 +1226,20 @@
     "\n",
     "1. Create an array with 3 elements and one with 5 elements containing integers\n",
     "2. Try to multiply the two arrays.\n",
-    "3. You should get an error message. Do you understand the problem ? How can you fix it?\n",
+    "3. You should get an error message. Do you understand the problem ? Change the size of one of the arrays so that you can multiply them.\n",
     "4. Change the ```dtype``` of the output to float32.\n",
     "5. Import the file that you cand find here: https://raw.githubusercontent.com/allisonhorst/palmerpenguins/master/inst/extdata/penguins.csv\n",
     "6. Use ```head()``` to visualize a few lines\n",
     "7. What's the type of the ```body_mass_g``` and ```year``` columns ?\n",
     "8. Transform the type of the ```year``` column into a float"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1258,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
