--- a/09-Numpy_arrays.ipynb
+++ b/09-Numpy_arrays.ipynb
@@ -6,7 +6,7 @@
     "id": "6LZWsXsoP9xF"
    },
    "source": [
-    "# 2. Numpy arrays\n",
+    "# Numpy arrays\n",
     "\n",
     "We have seen in the last notebook that the objects underlying the complex DataFrames are Numpy arrays. Why do we need this additional container and why can't we just use Python lists ?\n",
     "\n",
