--- a/10-Numpy_maths.ipynb
+++ b/10-Numpy_maths.ipynb
@@ -6,7 +6,7 @@
     "id": "8M8dqtraYgz0"
    },
    "source": [
-    "# 3. Numpy for mathematics\n",
+    "# Numpy for mathematics\n",
     "\n",
     "We had a preview of the possibilities offered by Numpy in the previous notebook when we multiplied two arrays **element-wise** without having to write a for loop. Numpy offers *vast* possibilities to extend this approach in much more complex cases. In this notebook we are going to see in a *very succint* way a few of the main features offered by Numpy. Numpy is a large library offering many tools for various problems. For your own work, you will often have to find the approriate function to achieve your goal, and usually a Google search is the fastes way to find information."
    ]
