--- a/11-Numpy_indexing.ipynb
+++ b/11-Numpy_indexing.ipynb
@@ -6,7 +6,7 @@
     "id": "ru7mNBPPCjqV"
    },
    "source": [
-    "# 4. Numpy indexing\n",
+    "# Numpy indexing\n",
     "\n",
     "Often we need to extract some information from a Pandas DataFrame. Here also, Pandas inherits many of the approaches used in Numpy. Therefore we start here by very briefly showing how to proceed with plain arrays before looking at the more complex DataFrames.\n",
     "\n",
