--- a/12-Minimal_plotting.ipynb
+++ b/12-Minimal_plotting.ipynb
@@ -6,7 +6,7 @@
     "id": "tr1UJ8ccpOj2"
    },
    "source": [
-    "# 5. Minimal plotting\n",
+    "# Minimal plotting\n",
     "\n",
     "We will see in the last part of the course how to do different types of plotting, how to adjust all elements in a plot etc. However before we reach this point, we need a simple way to have a look at simple datasets to better understand them. In this notebook, we therefore give a very minimalistic introduction to plotting which allows you to create line or scatter plots as well as histograms. For this we introduce here the Matplotlib library, which is the oldest and still one of the most widely used plotting library.\n",
     "\n",
