--- a/13-Images_as_arrays.ipynb
+++ b/13-Images_as_arrays.ipynb
@@ -5,7 +5,7 @@
    "id": "8bd11832-8efa-4cfc-9a73-4995ad673664",
    "metadata": {},
    "source": [
-    "# 6. Images as arrays\n",
+    "# Images as arrays\n",
     "\n",
     "In the previous chapters, we have learned about Numpy arrays in general. These structures can hold any type of data but they are particularly ideal to store image data. Indeed in fields such as biomedical imaging or satellite imagery, multi-dimensional data are acquired that easy to process as arrays. In this chapter, we make therefore a small detour to see how to use arrays for images (if you are only interested in dealing with tabular data, you can skip this chapter)."
    ]
