--- a/17-Pandas_combine.ipynb
+++ b/17-Pandas_combine.ipynb
@@ -7,7 +7,7 @@
     "id": "kjwMVdVbkr0P"
    },
    "source": [
-    "# 10. Combining and grouping DataFrames"
+    "# Combining and grouping DataFrames"
    ]
   },
   {
