--- a/19-Matplotlib_content.ipynb
+++ b/19-Matplotlib_content.ipynb
@@ -7,7 +7,7 @@
     "id": "VqmcZVxRjNza"
    },
    "source": [
-    "# 12. Matplotlib: data content\n",
+    "# Matplotlib: data content\n",
     "\n",
     "Visualization is an essential step for any data analysis. It can both help to design an analysis and to present results. There is a large choice of plotting libraries in Python, all with different strengths and weaknesses. In the frame of this course, we present two of them: Matplotlib and seaborn. We use these two packages because 1) they are very popular and you will necessarily encounter them, 2) they are examples of low- (Matplotlib) and hihgh-level (seaborn) libraries, 3) they represent two different plotting \"philosophies\" and finally 4) seaborn builds on top of Matplotlib which facilitates the learning.\n",
     "\n",
