--- a/27-scipy_statsmodels.ipynb
+++ b/27-scipy_statsmodels.ipynb
@@ -6,7 +6,7 @@
    "id": "73e095d0-574f-48ca-9062-ba6a91870323",
    "metadata": {},
    "source": [
-    "## 20. Data analysis\n",
+    "## Data analysis\n",
     "\n",
     "We have seen some elements of data analysis in the previous chapters. For example, we have seen how to extract basic statistics from DataFrames or how to add some regression analysis to plots in seaborn. Here we extend this exploratory analysis and present how true modelling can be performed using SciPy and StatsModels."
    ]
