--- a/01-Introduction.ipynb
+++ b/01-Introduction.ipynb
@@ -1,1 +1,96 @@
-{"nbformat":4,"nbformat_minor":5,"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.7.9"},"toc":{"base_numbering":1,"nav_menu":{},"number_sections":false,"sideBar":true,"skip_h1_title":false,"title_cell":"Table of Contents","title_sidebar":"Contents","toc_cell":false,"toc_position":{},"toc_section_display":true,"toc_window_display":true},"varInspector":{"cols":{"lenName":16,"lenType":16,"lenVar":40},"kernels_config":{"python":{"delete_cmd_postfix":"","delete_cmd_prefix":"del ","library":"var_list.py","varRefreshCmd":"print(var_dic_list())"},"r":{"delete_cmd_postfix":") ","delete_cmd_prefix":"rm(","library":"var_list.r","varRefreshCmd":"cat(var_dic_list()) "}},"types_to_exclude":["module","function","builtin_function_or_method","instance","_Feature"],"window_display":false},"colab":{"name":"00-Introduction.ipynb","provenance":[],"collapsed_sections":[]}},"cells":[{"cell_type":"markdown","metadata":{"id":"metallic-destiny"},"source":["# 00. Introduction\n","\n","In the first part of the course, you have learned about basics of programming and Python. In particular you have used almost exclusively *built-in* Python modules, i.e. libraries that come out of of the box with Python.\n","\n","In this second part of the course (and in the last one as well) we are going to explore *external* packages, i.e. modules that are separate from base Python and fill the need for specific functionalities in particular domains. In this course, we need functionalities in three areas for which we will explore various packages: (1) handling tabular data mainly with Pandas, (2) calculating statistics, performing regression etc. with Numpy, Scipy and Stats and finally (3) plotting data with Matplotlib and Seaborn."],"id":"metallic-destiny"},{"cell_type":"code","metadata":{"id":"enhanced-pillow"},"source":[""],"id":"enhanced-pillow","execution_count":null,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "metallic-destiny",
+   "metadata": {
+    "id": "metallic-destiny"
+   },
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "In the first part of the course, you have learned about basics of programming and Python. In particular you have used almost exclusively *built-in* Python modules, i.e. libraries that come out of of the box with Python.\n",
+    "\n",
+    "In this second part of the course (and in the last one as well) we are going to explore *external* packages, i.e. modules that are separate from base Python and fill the need for specific functionalities in particular domains. In this course, we need functionalities in three areas for which we will explore various packages: (1) handling tabular data mainly with Pandas, (2) calculating statistics, performing regression etc. with Numpy, Scipy and Stats and finally (3) plotting data with Matplotlib and Seaborn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "enhanced-pillow",
+   "metadata": {
+    "id": "enhanced-pillow"
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "00-Introduction.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
