--- a/18-Real_world.ipynb
+++ b/18-Real_world.ipynb
@@ -6,7 +6,7 @@
     "id": "2KGt0M0jmhmT"
    },
    "source": [
-    "# 11. Real-world problems and additional topics\n",
+    "# Real-world problems and additional topics\n",
     "\n",
     "During this course we have either used simple demo examples designed to illustrate specific aspects of Pandas, or real-world data where we ignored some of the potentials problems. In this notebook, we address a few of the common problems that you might encounter. We also address some other common situations that you might encounter such as dealing with specific formats like dates."
    ]
