--- a/22-Seaborn_distributions_relations.ipynb
+++ b/22-Seaborn_distributions_relations.ipynb
@@ -7,7 +7,7 @@
     "id": "vv1O4hGo5dfU"
    },
    "source": [
-    "# 15. Seaborn: distributions and relations\n",
+    "# Seaborn: distributions and relations\n",
     "\n",
     "As we have just seen, seaborn allows to draw very quickly complex plots in order to explore data. Here we further explore the capabilities offered by the packages to quickly visualize relations and ditributions"
    ]
