--- a/24-Matplotlib_statistics.ipynb
+++ b/24-Matplotlib_statistics.ipynb
@@ -7,7 +7,7 @@
     "id": "Be1xhmXEjgNk"
    },
    "source": [
-    "# 17. Matplotlib statistics\n",
+    "# Matplotlib statistics\n",
     "\n",
     "We recommend doing statistical plots with seaborn. However sometimes you will have data coming from an analysis that you will want to plot directly in Matplotlib. We show here some of the basics to do that."
    ]
