--- a/06-File_handling.ipynb
+++ b/06-File_handling.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b812aece-19ae-4815-80b8-cab77a295d36",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b5dc31db-63b6-4063-a8e7-042b8f7c1a18",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "902a4a18-14cb-4048-8493-9d7d08831597",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "6c6ee5bb-e2be-449f-9d88-eb15671dae04",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "e0c76c57-6e73-4276-a480-fd8be902b906",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,23 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "985d05d3-c40e-41f6-8d4d-37de952081df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/myfile.txt')"
+       "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder.joinpath('myfile.txt')"
+    "folder.joinpath('environment.yml').is_file()"
    ]
   },
   {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "8d66d332-f4cc-46fd-9a3f-7749b08e22c0",
    "metadata": {},
    "outputs": [],
@@ -182,17 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "3cab5f9a-1a7b-4d47-bfbd-e1568e54b55d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/06-Flow_control.ipynb')"
+       "PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/22-Seaborn_distributions_relations.ipynb')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,24 +211,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "6568a98f-8cd4-42ea-869e-dcc2e3a278c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/06-Flow_control.ipynb'),\n",
-       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/environment.yml'),\n",
-       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/03-Functions_packages.ipynb'),\n",
-       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/README.md'),\n",
-       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/05-File_handling.ipynb'),\n",
-       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/02-Variables.ipynb'),\n",
-       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/01-Notebooks.ipynb'),\n",
-       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1/04-Data_structures.ipynb')]"
+       "[PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/22-Seaborn_distributions_relations.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/12-Minimal_plotting.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/30-AI_assistants.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/19-Matplotlib_content.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/environment.yml'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/26-Alternatives.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/14-Back_to_Pandas.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/09-Numpy_arrays.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/images'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/16-DataFrame_indexing.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/Solutions'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/21-Seaborn_concept.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/17-Pandas_combine.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/29-Image_processing.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/05-Data_structures.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/02-Notebooks.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/06-File_handling.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/Readme.md'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/_toc.yml'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/27-scipy_statsmodels.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/13-Images_as_arrays.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/.gitignore'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/24-Matplotlib_statistics.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/23-Seaborn_regression.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/_config.yml'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/08-Classes.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/.github'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/book'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/01-Introduction.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/11-Numpy_indexing.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/10-Numpy_maths.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/28-scikit-learn.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/03-Variables.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/18-Real_world.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/25-Matplotlib_annotations.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/.git'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/15-Operate_on_DataFrames.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/04-Functions_packages.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/07-Flow_control.ipynb'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/plots'),\n",
+       " PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy/20-Matplotlib_non_data_elements.ipynb')]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "1f71d7c9-6a5f-4c26-8cda-a523ad6cba78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1')"
+       "PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,17 +318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "7819cb2d-63b1-4674-a821-f5b26aca81af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'06-Flow_control.ipynb'"
+       "'22-Seaborn_distributions_relations.ipynb'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,17 +347,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "96fd65f5-8e22-483f-80a5-d6bc98476b60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'06-Flow_control'"
+       "'22-Seaborn_distributions_relations'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "aada4772-1805-4a37-93d4-426f8fe13942",
    "metadata": {},
    "outputs": [
@@ -345,7 +378,7 @@
        "'.ipynb'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,17 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "57d10d95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object Path.glob at 0x105766790>"
+       "<generator object Path.glob at 0x106195cf0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,17 +436,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "7c04ad69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1'"
+       "'/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,17 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "f699f91a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/Crash_Course_DataSciPy/Day1')"
+       "PosixPath('/Users/gw18g940/GoogleDrive/DSL/Trainings/DAVPy')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "66a0ea3b",
    "metadata": {},
    "outputs": [],
@@ -494,7 +527,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSPy2025",
+   "display_name": "aicp_image",
    "language": "python",
    "name": "python3"
   },
@@ -508,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
